<resources>
    <string name="app_name">RoR2 Modded Item List</string>
    <string name="title_main">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_notepad">Notepad</string>
    <string name="title_settings">Settings</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_quit">Quit</string>
    <string name="title_secret">Secret</string>
    <string name="button_secret">\???</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>