<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_main" />

    <item
        android:id="@+id/notepadFragment"
        android:icon="@drawable/ic_baseline_draw_24"
        android:title="@string/title_notepad" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/changelogFragment"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/title_changelog" />

    <item
        android:id="@+id/quitFragment"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/title_quit" />
</menu>